--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Notes to tab",
-  "name": "Input notatation, print out tab in realtime",
+  "name": "Input notation, print out tab in realtime",
   "icons": [
     {
       "src": "favicon.ico",
