--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notate",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
@@ -18,6 +18,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "engines" : { 
+    "node" : "10.16.0" 
   },
   "browserslist": {
     "production": [
