--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,12 +18,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-    - name: Install & Lint
+    - name: Build
       run: |
         npm install
-        npm lint
-    - name: Build
-      run: npm run build --if-present
+        npm run lint
+        npm run build --if-present
     - name: Deploy
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       env:
