--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,10 +17,11 @@ jobs:
     - name: Use Node.js 10.x
       uses: actions/setup-node@v1
       with:
-        version: 10.x
+        node-version: 10.x
     - name: Build
       run: |
         npm install
+        npm run lint
         npm run build --if-present
     - name: Deploy
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
@@ -29,4 +30,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         AWS_CLOUDFRONT_DIST_ID: ${{ secrets.AWS_CLOUDFRONT_DIST_ID }}
-      run: node ./scripts/deploy.js
+      run: node ./deploy-scripts/deploy.js
