--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,10 +18,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
+    - name: Test
+      run: |
+        npm install
+        npm lint
+        npm test
     - name: Build
       run: |
         npm install
-        npm run lint
         npm run build --if-present
     - name: Deploy
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
