--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,9 +24,7 @@ jobs:
         npm run lint
         npm run test
     - name: Build
-      run: |
-        npm install
-        npm run build --if-present
+      run: npm run build --if-present
     - name: Deploy
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       env:
