--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,11 +18,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-    - name: Build
+    - name: Lint and test
       run: |
         npm install
         npm run lint
-        npm run build --if-present
+        npm run test
+    - name: Build
+      run: npm run build --if-present
     - name: Deploy
       if: github.event_name == 'push' && github.ref == 'refs/heads/master'
       env:
