--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    - name: Use Node.js 10.x
+    - name: Use Node.js 10.16.0
       uses: actions/setup-node@v1
       with:
-        node-version: 10.x
+        node-version: 10.16.0
     - name: Install & lint
       run: |
         npm install
