Reinstate commit/push hook

--- a/package.json
+++ b/package.json
@@ -67,6 +67,12 @@
     "lint": "NODE_PATH=src eslint --ext .js,.jsx src",
     "lint:fix": "yarn lint --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test",
+      "pre-push": "npm run cypress:CI"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
