--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
+  "resolutions": {
+    "immer": "^9.0.6"
+  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
